@@ -1,11 +1,14 @@
 # Graphische Ausgabe des Spielverlaufs
-USE_UI_GTKMM = true
+USE_UI_GTKMM = false
 
 # Eingabe, nur mit USE_UI_GTKMM verwenden
 USE_EINGABE = false
 
 # Spiel, ohne einen separaten Server.
-USE_EIGENES_SPIEL = true
+USE_EIGENES_SPIEL = false
 
 # Mit Threads arbeiten (9 Stück)
 USE_THREADS = true
+
+# Zeitbeschränkung für die Tiefensuche (in Sekunden)
+CPPFLAGS += -DZEITBESCHRAENKUNG=0.5
