@@ -2,7 +2,7 @@
 
 rm ./tronbot
 
-export CXXFLAGS="-Wall -Werror -Wno-parentheses -std=c++14 -O3"
+#export CXXFLAGS="-Wall -Werror -Wno-parentheses -std=c++14 -O3"
 #export CXXFLAGS="-Wall -Werror -Wno-parentheses -std=c++14 -O0 -ggdb"
 
 echo "Kompiliere tronbot…"
@@ -18,9 +18,9 @@ BOTA="../src/tronbot"
 BOTB="bots/dummybot/bot"
 
 #SPIELRASTER="../Spielraster/Test.txt"
-#SPIELRASTER="../Spielraster/simple.txt"
+SPIELRASTER="../Spielraster/simple.txt"
 #SPIELRASTER="../Spielraster/200x200.txt"
-SPIELRASTER="../Spielraster/100x100.txt"
+#SPIELRASTER="../Spielraster/100x100.txt"
 #SPIELRASTER="../Spielraster/50x50.txt"
 #SPIELRASTER="../Spielraster/5x5.txt"
 #SPIELRASTER="../Spielraster/10x10.txt"
@@ -45,8 +45,8 @@ if grep -q "USE_EIGENES_SPIEL *= *true" Makefile.modules; then
 else
   # Spiel über den Server
   pushd ../freiesmagazin-2014-10-contest
-  ./start.sh "$SPIELRASTER" "$BOTA" "$BOTB"
-  #./start.sh "$SPIELRASTER" "$BOTA" "$BOTB" --log > bot.log 2>&1
+  #./start.sh "$SPIELRASTER" "$BOTA" "$BOTB"
+  ./start.sh "$SPIELRASTER" "$BOTA" "$BOTB" --log > bot.log 2>&1
   # gui/gui
   popd 
 fi
