@@ -51,6 +51,41 @@ using std::string;
 using std::vector;
 #include <memory>
 using std::unique_ptr;
+#ifndef __cpp_lib_make_unique
+// unique_ptr implementation -*- C++ -*-
+// vom gcc
+namespace std {
+  template<typename _Tp>
+    struct _MakeUniq
+    { typedef unique_ptr<_Tp> __single_object; };
+
+  template<typename _Tp>
+    struct _MakeUniq<_Tp[]>
+    { typedef unique_ptr<_Tp[]> __array; };
+
+  template<typename _Tp, size_t _Bound>
+    struct _MakeUniq<_Tp[_Bound]>
+    { struct __invalid_type { }; };
+
+  /// std::make_unique for single objects
+  template<typename _Tp, typename... _Args>
+    inline typename _MakeUniq<_Tp>::__single_object
+    make_unique(_Args&&... __args)
+    { return unique_ptr<_Tp>(new _Tp(std::forward<_Args>(__args)...)); }
+
+  /// std::make_unique for arrays of unknown bound
+  template<typename _Tp>
+    inline typename _MakeUniq<_Tp>::__array
+    make_unique(size_t __num)
+    { return unique_ptr<_Tp>(new typename remove_extent<_Tp>::type[__num]()); }
+
+  /// Disable std::make_unique for arrays of known bound
+  template<typename _Tp, typename... _Args>
+    inline typename _MakeUniq<_Tp>::__invalid_type
+    make_unique(_Args&&...) = delete;
+} // namespace std
+#endif
+
 using std::make_unique;
 
 #include <cassert>
@@ -72,11 +107,12 @@ inline X max(X const& a, X const& b, X const& c)
   template<class X>
 inline X max(X const& a, X const& b, X const& c, X const& d)
 { return std::max(std::max(a, b), std::max(c, d)); }
-}
+} // namespace std
 
 // Zeitbeschränkung in Sekunden
+#ifndef ZEITBESCHRAENKUNG
 #define ZEITBESCHRAENKUNG 1
-
+#endif
 
 // creates a segmentation fault
 #define SEGFAULT if (true) { cerr << "Created segmentation fault:\n" \
