@@ -1,3 +1,7 @@
+2014-12-12
+	- Makefile.rules für gcc 4.8.3 angepasst (-std=c++1y statt -std=c++14)
+	- std::make_unique von der gcc-Implementierung kopiert
+
 2014-12-11
 	- Bei der Tiefensuche wird die Tiefe so lange erhöht, bis das Zeitlimit erreicht ist
 	- Multithreadunterstützung
